cluster/apps/default/echo/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: ghcr.io/mendhak/http-https-echo:42
          imagePullPolicy: Always
          name: echo
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
